--- a/config/mosquitto.template.conf
+++ b/config/mosquitto.template.conf
@@ -906,6 +906,11 @@
 
 allow_anonymous true
 
+log_type debug
+log_type error
+log_type warning
+log_type notice
+
 # Password file
 # password_file /mosquitto/config/mosquitto.passwd
 
